[package]
name = "scilla"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = "0.9.1"
console = "0.16.1"
indicatif = "0.18.3"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "tokio-macros",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
thiserror = { version = "2.0.17", default-features = false }
bincode = "1.3.3"
chrono = "0.4"
comfy-table = "7.1"
dirs = "5.0"

# solana
solana-vote-interface = "4"
solana-instruction = "3"
solana-message = "3"
solana-stake-interface = "2"
solana-transaction = "3"
solana-account = "3"
solana-epoch-info = "3"
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-keypair = "3"
solana-commitment-config = "3"
solana-pubkey = "3"
solana-signature = "3"
solana-nonce = "3"
solana-sdk-ids = "3"
base64 = "0.22.1"
bs58 = "0.5.1"
solana-transaction-status = "3.1.4"
solana-sdk = "3.0.0"


[dev-dependencies]
tempfile = "3.8"
