[package]
name = "scilla"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blueshift-gg/Scilla"

[dependencies]
inquire = "0.9.1"
console = "0.16.1"
indicatif = "0.18.3"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "tokio-macros",
    "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
thiserror = { version = "2.0.17", default-features = false }
bincode = "1.3.3"
chrono = "0.4"
comfy-table = "7.1"
dirs = "5.0"



# solana
solana-vote-interface = "4"
solana-instruction = "3"
solana-message = "3"
solana-stake-interface = { version = "2.0.2", features = ["bincode"] }
solana-transaction = "3"
solana-account = { version = "3.2.0", features = ["bincode"] }
solana-epoch-info = "3"
solana-rpc-client = "3"
solana-rpc-client-api = "3"
solana-sdk-ids = "3"
solana-clock = "3"
solana-sysvar = "3"
solana-keypair = "3"
solana-commitment-config = "3"
solana-pubkey = "3"
solana-signature = "3"
solana-nonce = "3"
base64 = "0.22.1"
bs58 = "0.5.1"
solana-transaction-status = "3.1.4"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-loader-v3-interface = {version = "6.1.0", features = ["bincode"]}
solana-client = "3.1.5"
solana-connection-cache = "3.1.5"
solana-tpu-client = "3.1.5"

[dev-dependencies]
tempfile = "3.8"
